# iguanair

./: .gitignore  BUILDING  ChangeLog  PSocConfig.xml  README  README.md  body.asm  body.inc  boot.tpl  flashsecurity.txt  iguanaIR-reflasher.spec  loader.asm  loader.inc  make-dist.sh  mkChangelog  pc.asm  pins.asm  usb_ir.hex
debian/: PackageLirc.sh  docs  (+20 more)
software/usb_ir/: .gitignore  AUTHORS  Android.cmake  CMakeLists.txt  ChangeLog  Make.settings.in  Makefile  Makefile.in  README.txt  WHY  base.c  base.h  bootstrap.sh  check_git_status.cmake  client-interface.c  client-interface.h  client.c  compat-unix.c  compat.c  compat.h  compatibility.c  compatibility.h  config.h.in  config.h.in.cmake  configure  configure.in  daemon.c  daemonosx.c  dataPackets.c  dataPackets.h  device-interface.c  device-interface.h  devicebase.h  direct.h  driver.c  driver.h  driverapi.h  ig.ver  igdaemon.c  igdaemon.h  (+45 more)
software/usb_ir/autoconf/: ac_ax_cflags_gcc_option.m4  ac_pkg_swig.m4  ac_python_devel.m4  acinclude.m4  configure.ac
software/usb_ir/bootstrap/: CS-gcc-cross.toolchain  RunCMake.bat  linux-arm-settings.txt  mkshortcut.vbs  runCmake  settings.txt.ARM  vcxprojWriter.py  windows-arm-settings.bat
software/usb_ir/bootstrap/CMakeMacros/: Basics.txt  CopyOutput.txt  CrossCompile.txt  GitVersion.txt  GitVersionWriter.txt  Helpers.txt  Linux.txt  MakeSip.txt  NMakeJOM.txt  Platform.txt  Qt.txt  Qt4.txt  Qt5.txt  Qwt.txt  VsDir.bat  Windows.txt
software/usb_ir/bootstrap/CMakeMacros/CMakeModules/: FindArgp.cmake  FindOpenCV.cmake  FindPy2Exe.cmake  FindPy2Exe.py  FindQwt.cmake  FindSIP.py
software/usb_ir/bootstrap/src/: ArmBase.sln  ArmBase.vcxproj  ArmBase.vcxproj.filters  ArmSettings.xml  version.rc.in
software/usb_ir/darwin/: Makefile.darwin  README-Darwin.txt  clock_gettime.h  hotplug.c
software/usb_ir/darwin/i386/lib/: libpopt.0.0.0.dylib  libpopt.0.dylib  libusb-0.1.4.4.4.dylib
software/usb_ir/darwin/powerpc/lib/: libpopt.0.0.0.dylib  libusb-0.1.4.4.4.dylib  libusb-0.1.4.dylib
software/usb_ir/docs/: LircVsKernel.txt  Makefile  TroubleShooting  WikiStart  WorkingVersions.txt  devices  driver  driverProtocol  faq  firmware  hardware  hwProtocol  igclient  igclient_GPIO  igclient_Miscellaneous  igclient_Receiving  igclient_Sending  license  lirc  pullDocs  whatTheHeck
software/usb_ir/drivers/: CMakeLists.txt  Makefile.in  libusb.c  libusbpre1.c  loggingWrap.c  loggingWrap.h
software/usb_ir/examples/: example1.c
software/usb_ir/files/base/lib/udev/rules.d/: 80-iguanaIR.rules
software/usb_ir/files/python/usr/share/iguanaIR-reflasher/: iguanaIR-reflasher
software/usb_ir/files/sysV/etc/init.d/: iguanaIR
software/usb_ir/files/systemd/lib/systemd/system/: iguanaIR.service
software/usb_ir/guiclient/: BenTesting.fbp  IguanaClient.py  client.fbp  client.xrc  recognizer
software/usb_ir/iguanair-lirc/: 60-blacklist-kernel-iguanair.conf  Makefile  README  iguanaIR.c  iguanaIR.conf  iguanaIR.html
software/usb_ir/iguanair-reflasher/iguanaIR-reflasher-0.3/debian/: changelog  files  iguanair-reflasher-default.ex
software/usb_ir/iguanair-reflasher/iguanair-reflasher-0.4/: iguanaIR-reflasher-0.3.tar.bz2  iguanair-reflasher-0.3.tar.bz2  iguanair-reflasher.spec
software/usb_ir/iguanair-reflasher/iguanair-reflasher-0.4/debian/: changelog  control  files
software/usb_ir/lirc-drv/: 60-blacklist-kernel-iguanair.conf  README.md  iguanaIR.html
software/usb_ir/mono/: IguanaIR.cs  Makefile  iguanaTest.cs
software/usb_ir/osx/: README-OSX.txt  com.iguana.igdaemon.plist  daemonosx.c
software/usb_ir/packaging/: Makefile
software/usb_ir/packaging/debian/: Makefile  PackageLirc.sh  changelog  conffiles  control  postinst  postrm  prerm  rules  tomake
software/usb_ir/packaging/fedora/: iguanaIR.spec
software/usb_ir/plug-trigger/hotplug/: iguanaIR  iguanaIR.usermap
software/usb_ir/plug-trigger/udev/: iguanaIR.rules
software/usb_ir/python/: CMakeLists.txt
software/usb_ir/reflasher/: Makefile  iguanaIR-reflasher  looper  upgrade-usb
software/usb_ir/reflasher/hex/: body-0.hex  body-1.hex  body-2.hex  body-3.hex  body-4.hex  body-5.hex  body-6.hex  body-7.hex  body-8.hex  loader-0.hex  loader-1.hex  loader-2.hex  loader-3.hex  usb_ir-1.hex  usb_ir-2.hex  usb_ir-3.hex  usb_ir-4.hex
software/usb_ir/reflasher/usb_ir.reflasher/: PSocConfig.xml  boot.tpl  flashsecurity.txt  lib  loader.asm  loader.inc  main.asm  pc.asm  usb_ir.SOC
software/usb_ir/reflasher/usb_ir.reflasher/output/: usb_ir.hex
software/usb_ir/scripts/: mode2-translator  reflash-tester  send-loop  serial-test
software/usb_ir/testdata/: cable-right.txt  deadbeef.blk  learned-vcr.conf  panasonic-power.txt  panasonic.conf  pinon.blk  size-test.txt  technics.conf  toolong.txt  vcr-power.txt  vcr.conf  viper.conf  viperDance  viperMove  vizio-info.txt
software/usb_ir/testdata/panasonic/: ch-down.txt  ch-up.txt  power.txt  vol-down.txt  vol-up.txt
software/usb_ir/udev/: iguanaIR.rules
software/usb_ir/utils/: changeFrequency  changer  clearID  initLCD  make_version.bat  make_version.sh  record-sends  serial-test  usb-test  writeLCD
software/usb_ir/win32/: .gitignore  IguanaIR Package.vcproj  README.txt  base.c  compat-windows.c  compat.c  config.h  driver-libusb.vcproj  igclient.vcproj  igdaemon.vcproj  iguanaIR-python.vcproj  iguanaIR.iss  iguanaIR.vcproj  pipes.c  py2exe-setup.py  service.c  service_nt.c  setup.py  stdbool.h  usb_ir.sln  usb_ir.vcproj
software/usb_ir/win32/argp-standalone-1.3/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  TODO  Versions  acinclude.m4  aclocal.m4  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pv.c  argp-pvh.c  argp-test.c  argp.def  argp.h  argp.vcproj  config.h.in  configure  configure.ac  mempcpy.c  strcasecmp.c  strchrnul.c  strndup.c  vsnprintf.c
software/usb_ir/win32/argp-standalone-1.3/testsuite/: Makefile.am  Makefile.in  ex1-test  ex1.c  ex3.c  ex4.c  permute-test  run-tests
software/usb_ir/win32/libusb-win32/: SignCAT.bat  iguanaIR.cat  iguanaIR.cdf  iguanaIR.inf  libusb.lib  libusb0.sys
(+240 files in other folders)
